<?xml version="1.0" encoding="utf-8"?>

<!-- Layout de la actividad principal de la aplicación -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lluismasdeu.pprog2_p_final.activities.SearchActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Búsqueda por geolocalización / búsqueda -->
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <ImageButton
            android:src="@drawable/ic_gps"
            android:tint="@color/iconsColor"
            android:background="@color/imageButtonsColor"
            android:onClick="onLocationSearchButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/activity_vertical_margin" />

        <EditText
            android:id="@+id/search_editText"
            android:hint="@string/search_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/activity_vertical_margin" />

        <ImageButton
            android:id="@+id/clear_imageButton"
            android:src="@drawable/ic_clear"
            android:tint="@color/iconsColor"
            android:background="@color/imageButtonsColor"
            android:onClick="onClearButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <!-- Campos del radio de búsqueda por geolocalización -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/search_radius"
            android:textSize="@dimen/default_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_vertical_margin" />

        <SeekBar
            android:id="@+id/radius_seekBar"
            android:thumbTint="@color/colorAccent"
            android:progressTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/radius_textView"
            android:text="@string/radius_km"
            android:textSize="@dimen/default_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <!-- Botón de búsqueda -->
        <Button
            android:text="@string/search"
            android:textAllCaps="false"
            android:background="@color/searchButtonColor"
            android:onClick="onSearchButtonClick"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:text="@string/recent_searches"
            android:textSize="@dimen/title_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nothingToShow_linearLayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/nothing_to_show"
            android:textSize="@dimen/default_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/recentSearches_listView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</LinearLayout>